--- a/css/index.css
+++ b/css/index.css
@@ -184,10 +184,104 @@ img{
 		color: #757575;
 		text-decoration: none;
 	}
+
 	nav .sousuo .box_zi a:hover{
 		background:   #ff6700;
 		color: #fff;
 	}
+	nav{
+		position: relative;
+	}
+	nav .navmenu{
+		position: absolute;
+		width: 100%;
+		height: 229px;
+		border-top: 1px solid #e0e0e0;
+		background: #fff;
+		left: 0;
+		top: 100px;
+		/* bottom: 0; */
+		z-index: 24;
+		transition: all 4s;
+		/* opacity: 0; */
+		display: none;
+	}
+	nav .navmenu ul{
+		padding: 0;
+		margin: 0;
+	}
+	nav .nav:hover .navmenu{
+		opacity: 1;
+		display: block;
+		/* transform: translateY(229px); */
+	}
+	nav .navmenu ul.first{
+		width: 100%;
+		height: 100%;
+		display: none;
+	}
+	nav .navmenu ul.active{
+		display: block;
+	}
+	nav .navmenu ul.first li{
+		width: 160px;
+		padding: 35px 20px 0;
+		text-align: center;
+		float: left;
+		position: relative;
+	}
+	nav .navmenu ul.first li .img{
+		width: 160px;
+		padding: 0 15px;
+		height: 110px;
+		margin: 0 auto 16px;
+		border-right: 1px solid #E0E0E0;
+		text-align: center;
+	}
+	nav .navmenu ul.first li .img img{
+		width: 160px;
+		height: 110px;
+	}
+	nav .navmenu ul.first li .title{
+		margin: 0;
+		line-height: 20px;
+	}
+	nav .navmenu ul.first li .title a{
+		color: #333;
+		line-height: 20px;
+		text-align: center;
+		font-size: 16px;
+		text-decoration: none;
+	}
+	nav .navmenu ul.first li p{
+		color: #ff6700;
+		line-height: 20px;
+		font-size: 12px;
+		text-align: center;
+	}
+	nav .navmenu ul.first li .tou{
+		width: 100%;
+		position: absolute;
+		top: -35px;
+		left: 0;
+		height: 22px;
+		text-align: center;
+	}
+	nav .navmenu ul.first li .tou span{
+		display: inline-block;
+		width: 66px;
+		height: 22px;
+		border: 1px solid #ff6200;
+		color: #ff6200;
+		line-height: 22px;
+		font-size: 12px;
+		text-align: center;
+		box-sizing: border-box;
+	/* 	position: absolute;
+		top: 0; */
+	}
+
+
 /* banner */
 	.banner{
 		width: 100%;
@@ -809,18 +903,20 @@ img{
 		width: 100%;
 		height: 340px;
 		transition: all 0.5s ease;
-		overflow: hidden;
+		/* overflow: hidden; */
 		position: relative;
 	}
 	.many .text .xm ul li{
 		width: 296px;
 		height: 340px;
-		/* transition: all 0.5s ease; */
-		display: none;
+		float: left;
+		position: absolute;
+		left: 100%;
+		top: 0;
 	}
 	
 	.many .text .xm ul li.appear{
-		display: block;
+		left: 0;
 	}
 	.many .text .xm ul li h4{
 		margin: 0 20px 5px;
