--- a/css/index.css
+++ b/css/index.css
@@ -120,7 +120,6 @@ img{
 		box-sizing: border-box;
 	}
 	nav .nav ul li.item{
-		/* padding: 26px 10px 38px; */
 		color: #333;
 		float: left;
 		box-sizing: border-box;
@@ -191,29 +190,23 @@ img{
 	}
 	nav{
 		position: relative;
+		z-index: 12;
 	}
 	nav .navmenu{
 		position: absolute;
 		width: 100%;
-		height: 229px;
+		height: 0;
+		overflow: hidden;
 		border-top: 1px solid #e0e0e0;
 		background: #fff;
 		left: 0;
 		top: 100px;
-		/* bottom: 0; */
-		z-index: 24;
-		transition: all 4s;
-		/* opacity: 0; */
-		display: none;
+		z-index: 12;
+		/* transition: all 4s; */
 	}
 	nav .navmenu ul{
 		padding: 0;
 		margin: 0;
-	}
-	nav .nav:hover .navmenu{
-		opacity: 1;
-		display: block;
-		/* transform: translateY(229px); */
 	}
 	nav .navmenu ul.first{
 		width: 100%;
@@ -262,7 +255,7 @@ img{
 	nav .navmenu ul.first li .tou{
 		width: 100%;
 		position: absolute;
-		top: -35px;
+		top: -33px;
 		left: 0;
 		height: 22px;
 		text-align: center;
@@ -277,8 +270,7 @@ img{
 		font-size: 12px;
 		text-align: center;
 		box-sizing: border-box;
-	/* 	position: absolute;
-		top: 0; */
+	
 	}
 
 
@@ -571,7 +563,8 @@ img{
 	}
 	.dan .title{
 		width: 100%;
-		height: 100%;
+		/* height: 100%; */
+		height: 58px;
 		background: #fff;
 		position: relative;
 	}
@@ -580,10 +573,8 @@ img{
 		font-weight: 200;
 		line-height: 58px;
 		color: #333;
-		/* float: left; */
 	}
 	.dan .more{
-		/* float: right; */
 		position: absolute;
 		right: 0;
 		top: 24px;
@@ -596,29 +587,39 @@ img{
 		font-size: 16px;
 		border: 1px solid #e0e0e0;
 		transition: all 0.5s;
-		/* background: #b0b0b0; */
+		color: #E0E0E0;
 	}
-	.dan .more a.iconfont:hover{
+	.dan .container{
+		position: relative;
+	}
+	.dan .more a.active{
+		color: #B0B1BB;
+		/* left: 0; */
+	}
+	/* .dan .more a.iconfont:hover{
 		color: #ff6200;
-	}
+	} */
 	.dan .dan_bd{
 		width: 100%;
 		height: 380px;
 		padding-bottom: 40px;
+		position: relative;
 		overflow: hidden;
+		margin-top: 10px;
 	}
 	.dan .dan_bd .box1{
-		width: 2480px;
-		transition: all 0.5s ease;
+		width:100%;
 		height: 100%;
-		display: none;
+		overflow: hidden;
+		position: absolute;
+		top: 0;
+		left: 100%;
 	}
-	.dan .dan_bd .xian{
-		display: block;
+	.dan .dan_bd ul.xian{
+		left: 0;
 	}
-
 	.dan .dan_bd .box1 .item{
-		width: 234px;
+		width: 233px;
 		height: 300px;
 		float: left;
 		transition: all 0.6s;
@@ -714,6 +715,8 @@ img{
 		width: 100%;
 		height: 628px;
 		overflow: hidden;
+		margin-top: 15px;
+		cursor: pointer;
 	}
 	.home .xia .left{
 		width: 234px;
@@ -779,6 +782,7 @@ img{
 		text-align: center;
 	}
 	.home .right h3 a{
+		cursor: pointer;
 		color: #333;
 	}
 	.home .right .desc{
@@ -1004,4 +1008,177 @@ img{
 	.many .xm ul .dian .dot{
 		border: 2px solid #ff6700;
 		background: transparent;
+	}
+/* recommend */
+	.recommend{
+		width: 100%;
+		padding-bottom: 22px;
+		padding-top: 20px;
+		background: #F5F5F5;
+	}
+	.recommend .title{
+		background: #f5f5f5;
+	}
+/* footer */
+	footer{
+		width: 100%;
+		height:272px;
+		background: #fff; 
+	}
+	footer .title{
+		width: 100%;
+		padding: 27px 0;
+		border-bottom: 1px solid #e0e0e0;
+	}
+	footer .title .service{
+		width: 100%;
+		height: 25px;
+	}
+	footer .title .service li{
+		float: left;
+		border-left: 1px solid #e0e0e0;
+		width: 19.8%;
+		height: 100%;
+		font-size: 16px;
+		text-align: center;
+		line-height: 25px;
+		color: #333;
+	}
+	footer a{
+		color: #333;
+		list-style: none;
+		text-decoration: none;
+	}
+	footer .title li .iconfont{
+		font-size: 24px;
+		margin-right: 6px;
+		line-height: 25px;
+		vertical-align: -4px;
+	}
+	footer .title .service li:hover a{
+		color: #FF6700;
+	}
+	footer .title .service li:hover .iconfont{
+		color: #FF6700;
+	}
+	footer .bottom{
+		width: 100%;
+		height: 192px;
+		padding: 40px 0;
+		box-sizing: border-box;
+	}
+	footer .bottom dl{
+		width: 160px;
+		height: 112px;
+		float: left;
+		margin: 0;
+	}
+	footer .bottom dl dt{
+		font-size: 14px;
+		margin: -1px 0 26px;
+		line-height: 1.25;
+		color: #424242;
+	}
+	footer .bottom dl dd{
+		margin: 10px 0 0;
+		font-size: 12px;
+		color: #757575;
+	}
+	footer .bottom dl a{
+		color: #757575;
+		text-decoration: none;
+	}
+	footer .bottom .col{
+		float: right;
+		width: 252px;
+		height: 112px;
+		border-left: 1px solid #e0e0e0;
+		text-align: center;
+		color: #616161
+	}
+	footer .bottom .col .phone{
+		color: #ff6200;
+		font-size: 22px;
+		margin: 0 0 5px;
+		line-height: 1;
+
+	}
+	footer .bottom .col .er{
+		font-size: 12px;
+		margin: 0 0 16px;
+	}
+	footer .bottom .col a{
+		color: #ff6200;
+		display: inline-block;
+		width: 118px;
+		height: 28px;
+		line-height: 28px;
+		font-size: 12px;
+		border: 1px solid #ff6200;
+	}
+	footer .bottom .col .iconfont{
+		color: #ff6200;
+		font-weight: 700;
+		margin-right: 4px;
+		line-height: 28px;
+	}
+	footer .site{
+		width:100%;
+		height: 57px;
+		padding: 30px 0 ;
+		background: #fafafa; 
+	}
+	footer .left{
+		width: 57px;
+		height: 57px;
+		float: left;
+		margin-right: 10px;
+	}
+	footer .left img{
+		width: 100%;
+	}
+	footer .zhong{
+		float: left;
+		color: #b0b0b0;
+		font-size: 12px;
+		height: 55px;
+		width: 590px;
+
+	}
+	footer .zhong .name{
+		line-height: 18px;
+	}
+	footer .zhong .name a{
+		color: #757575;
+		display: inline;
+		font-size: 12px;
+	}
+	footer .zhong .name span{
+		margin: 0 .25em;
+		line-height: 18px;
+	}
+	footer .zhong .desc{
+		line-height: 18px;
+
+	}
+	footer .zhong .desc a{
+		color: #b0b0b0;
+		text-decoration: none;
+		cursor: auto;
+	}
+	footer a:hover{
+		color: #ff6200;
+	}
+	footer .right{
+		float: right;
+		height: 28px;
+	}
+	footer .right ul{
+		height: 100%;
+	}
+	footer .right ul li{
+		float: left;
+	}
+	footer .right ul li img{
+		height: 28px;
 	}
