--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,17 @@ img{
 	width: 1226px;
 	margin: 0 auto;
 }
+.tophe{
+	width: 100%;
+	height: 120px;
+	background: url('../img/1.jpg') no-repeat center center;
+}
+.tophe a{
+	width: 100%;
+	height: 100%;
+	/* background: red; */
+	display: block;
+}
 /* header */
 	header{
 		width: 100%;
@@ -298,10 +309,10 @@ img{
 		position: absolute;
 		left: 0;
 		right: 0;
-		display: none;
+		opacity: 0;
 	}
 	.banner .banner_top .list.move{
-		display: block;
+		opacity: 1;
 	}
 	.banner .banner_top .move img{
 		width: 100%;
@@ -309,7 +320,6 @@ img{
 	.banner .left,.banner .right{
 		width: 35px;
 		height:70px;
-		
 		text-align: center;
 		position: absolute;
 		top: 50%;
@@ -561,14 +571,13 @@ img{
 		width: 100%;
 		height: 438px;
 	}
-	.dan .title{
+	.dan .title,.repin .title,.vadio .title{
 		width: 100%;
-		/* height: 100%; */
 		height: 58px;
 		background: #fff;
 		position: relative;
 	}
-	.dan .title h2{
+	.dan .title h2,.repin .title h2,.vadio .title h2{
 		font-size: 22px;
 		font-weight: 200;
 		line-height: 58px;
@@ -594,7 +603,9 @@ img{
 	}
 	.dan .more a.active{
 		color: #B0B1BB;
-		/* left: 0; */
+	}
+	.dan .more a.active:hover{
+		color: #ff6200;
 	}
 	/* .dan .more a.iconfont:hover{
 		color: #ff6200;
@@ -671,7 +682,7 @@ img{
 		width: 100%;
 		padding-top: 60px;
 		background: #f5f5f5;
-		overflow: hidden;
+		/* overflow: hidden; */
 	}
 	.box{
 		width: 1226px;
@@ -697,7 +708,6 @@ img{
 		padding: 16px 0 0;
 	}
 	.box .title .list li{
-		/* width: 25%; */
 		height: 80%;
 		color: #333;
 		line-height: 42px;
@@ -708,27 +718,26 @@ img{
 	}
 	.home .box .title .active{
 		color: #ff6700;
+		transition: all 0.05s 0.2s;
 		border-bottom: 2px solid #ff6700;
-		
 	}
 	.home .xia{
 		width: 100%;
 		height: 628px;
-		overflow: hidden;
+		/* overflow: hidden; */
 		margin-top: 15px;
 		cursor: pointer;
 	}
 	.home .xia .left{
 		width: 234px;
 		height: 614px;
-		/* margin-left: 14px; */
 		margin-bottom: 14px;
 		transition: all 0.2s linear;
 		float: left;
 	}
 	.home .xia .left:hover{
 		transform: translateY(-5px);
-		box-shadow:  5px  15px  50px 1px  rgba(0,0,0,0.2);
+		box-shadow:  1px  1px  50px 1px  rgba(0,0,0,0.2);
 	}
 	.home .xia .left a{
 		width: 234px;
@@ -757,9 +766,63 @@ img{
 		transition: all 0.2s linear;
 		background: #fff;
 		position: relative;
-		overflow: hidden;
 		float: left;
 		margin-bottom: 14px;
+	}
+	.home .xia .right li:hover{
+		transform: translateY(-5px);
+		box-shadow:  1px  1px  50px 1px  rgba(0,0,0,0.2);
+	}
+	.home .xia .right li:last-child{
+
+	}
+	.home .xia .right li:last-child:hover{
+		transform: none;
+		box-shadow: none;
+	}
+	.home .xia .right li.tu .latop{
+		width: 234px;
+		height: 93px;
+		padding-top: 50px;
+		position: relative;
+		background: #fff;
+		transition: all 0.2s linear;
+		margin-bottom: 14px;
+		display: block;
+	}
+	.home .xia .right li.tu .top1:hover,.home .xia .right li.tu .bottom:hover{
+		transform: translateY(-5px);
+		box-shadow:  1px  1px  50px 1px  rgba(0,0,0,0.2);
+	}
+	.home .xia .right li.tu .bottom{
+		width: 234px;
+		height: 93px;
+		display: block;
+	}
+	.home .xia .right li .latop h3{
+		font-size: 14px;
+		font-weight: 400;
+		margin: -10px 10px 5px 30px;
+		display: block;
+		text-align: left;
+	}
+	.home .xia .right li .latop p{
+		margin: 0 10px 0 30px;
+		font-size: 12px ;
+		color: #ff6700;
+		display: block;
+		text-align: left;
+	}
+	.home .xia .right li .latop .img{
+		width: 80px;
+		height: 80px;
+		position: absolute;
+		top: 32px;
+		right: 20px;
+	}
+	.home .xia .right li .latop img{
+		width: 80px;
+		height: 80px;
 	}
 	.home .right .img{
 		width: 150px;
@@ -850,6 +913,7 @@ img{
 		width: 100%;
 		height: 478px;
 		margin-bottom: 22px;
+		margin-top: 200px;
 	}
 	.many .title{
 		width: 100%;
@@ -1010,15 +1074,175 @@ img{
 		background: transparent;
 	}
 /* recommend */
-	.recommend{
+	.recommend,.repin{
 		width: 100%;
-		padding-bottom: 22px;
+		height: 410px;
 		padding-top: 20px;
 		background: #F5F5F5;
 	}
-	.recommend .title{
+	.recommend .title,.repin .title{
 		background: #f5f5f5;
 	}
+	.recommend .item{
+		transition: all 0.5s;
+		overflow: hidden;
+	}
+	.recommend .item:hover{
+		transform: translateY(-5px);
+		box-shadow: 1px 1px 25px 1px rgba(0, 0, 0, 0.2)
+	}
+/* repin */
+	.repin{
+		width: 100%;
+		/* margin-bottom: 22px; */
+		height: 510px;
+
+	}
+	.repin li{
+		width: 296px;
+		height: 425px;
+		background: #fff;
+		margin-right: 10px;float: left;
+		transition: all 0.5s;
+	}
+	.repin li:hover{
+		transform: translateY(-5px);
+		box-shadow: 1px 1px 50px 1px rgba(0, 0, 0, 0.2);
+	}
+	.repin li.tui .img{
+		width: 296px;
+		height: 220px;
+		margin: 0 0 28px;
+	}
+	.repin li.tui img{
+		width: 296px;
+		height: 220px;
+	}
+	.repin .nei{
+		height: 72px;
+		margin: 0 28px 22px;
+		font-size: 14px;
+		line-height: 24px;
+		font-weight: 400;
+		overflow: hidden;
+		box-sizing: border-box; 
+	}
+	.repin .author{
+		height: 18px;
+		margin: 0 28px 22px;
+		padding: 0 10px 0 0;
+		font-size: 12px ;
+		color: #b0b0b0;
+	}
+	.repin div.gang{
+		margin: 0 30px;
+		text-overflow: ellipsis;
+		white-space: nowrap;
+		overflow: hidden;
+	}
+	.repin div.gang h3{
+		font-size: 14px;
+		display: inline-block;
+		font-weight: 400;
+		color: #333;
+		vertical-align: bottom;
+		float: left;
+	}
+	.repin div.gang span{
+		margin: 0 10px;
+		float: left;
+		font-size: 14px;
+		color: #e0e0e0;
+	}
+	.repin div.gang p.price{
+		float: left;
+		display: inline;
+		font-size: 14px;
+		color: #ff6700;
+	}
+
+/* vadio */
+	.vadio{
+		width: 100%;
+		height: 343px;
+		background: #f5f5f5;
+		padding-bottom: 60px;
+	}
+
+	.vadio .title{
+		background: #f5f5f5;
+	}
+	.vadio .xia{
+		width: 100%;
+		height: 285px;
+	}
+	.vadio .xia li{
+		width: 296px;
+		height: 285px;
+		margin-bottom: 14px;
+		text-align: center;
+		background: #fff;
+		transition: all 0.5s linear;
+		float: left;
+		margin-right: 13.3px;
+	}
+	.vadio .xia li:last-child{
+		margin-right: 0;
+	}
+	.vadio .xia li:hover{
+		transform: translateY(-5px);
+		box-shadow: 1px 1px 50px 1px rgba(0, 0, 0, 0.2);
+	}
+	.vadio .xia li .img{
+		width: 296px;
+		height: 180px;
+		margin: 0 0 28px;
+		position: relative;
+	}
+	.vadio .xia li .img:hover span{
+		background: #ff6700;
+		border: 2px solid #ff6700;
+	}
+	.vadio .xia li .img a{
+		position: relative;
+	}
+	.vadio .xia li .img img{
+		width: 296px;
+		height: 180px;
+	}
+	.vadio .xia li .img span{
+		width: 32px;
+		height: 20px;
+		border: 2px solid #fff;
+		border-radius: 12px;
+		background: rgba(0, 0, 0, 0.6);
+		transition: all 0.5s;
+		position: absolute;
+		left: 20px;
+		bottom: 12px;
+		font-size: 10px;
+		line-height:22px;
+		text-align: center;
+		color: #fff;
+	}
+	.vadio h3{
+		margin: 0 0 6px;
+		font-size: 14px;
+		text-align: center;
+		font-weight: 400;
+		color: #333;
+	}
+	.vadio p{
+		height: 18px;
+		margin: 0;
+		font-size: 12px;
+		color: #b0b0b0;
+	}
+	
+
+
+
+
 /* footer */
 	footer{
 		width: 100%;
